--- a/tpl/news.html
+++ b/tpl/news.html
@@ -1,90 +1,129 @@
 <section class="w-full bg-white">
-  <div class="max-w-[1600px] mx-auto px-[60px] py-[80px]">
+  <div
+    class="max-w-[1600px] mx-auto
+           px-4 sm:px-8 lg:px-[60px]
+           py-12 sm:py-16 lg:py-[80px]"
+  >
 
-    <!-- header -->
-    <div class="flex items-center justify-between mb-[60px]">
+    <!-- HEADER -->
+    <div class="flex items-start justify-between gap-6 mb-8 sm:mb-12 lg:mb-[60px]">
       <h2
-        class="font-[Racama] text-[72px] leading-[95%] tracking-[-0.02em]
-               text-[#24272A]">
+        class="font-[Racama]
+               text-[32px] sm:text-[48px] lg:text-[72px]
+               leading-[1.05] tracking-[-0.02em]
+               text-[#24272A]"
+      >
         Новости
       </h2>
 
+      <!-- desktop button -->
       <a
         href="#"
-        class="flex items-center gap-4 px-8 py-5 border border-[#24272A]
-               text-[#24272A] text-[20px] font-semibold
-               hover:bg-[#24272A] hover:text-white transition">
+        class="hidden sm:inline-flex items-center gap-4
+               px-6 py-4 border border-[#24272A]
+               text-[#24272A] text-base font-semibold
+               hover:bg-[#24272A] hover:text-white transition"
+      >
         Все новости
-        <span class="text-[24px] leading-none">→</span>
+        <img src="/assets/svg/arrow-right.svg" class="w-6 h-6" alt="">
       </a>
     </div>
 
-    <!-- grid -->
+    <!-- LIST -->
     <div
-      class="grid grid-cols-3 gap-5
-             lg:grid-cols-3
-             md:grid-cols-2
-             sm:grid-cols-1">
+      class="flex gap-5 overflow-x-auto snap-x snap-mandatory
+             sm:grid sm:grid-cols-2 lg:grid-cols-3
+             sm:overflow-visible"
+    >
 
-      <!-- card -->
-      <article class="flex flex-col gap-4">
-        <div class="w-full h-[240px] bg-[#F0F1F2] overflow-hidden">
+      <!-- CARD -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col gap-4 snap-start">
+        <div class="w-full h-[220px] bg-[#F0F1F2] overflow-hidden">
           <img
             src="/assets/img/news-1.jpg"
             alt=""
-            class="w-full h-full object-cover hover:scale-105 transition duration-500">
+            class="w-full h-full object-cover
+                   transition duration-500 hover:scale-105"
+          >
         </div>
 
-        <div class="text-[#8D9399] text-[16px] leading-[160%]">
+        <div class="text-[#8D9399] text-sm leading-[160%]">
           05.12.2025
         </div>
 
         <h3
-          class="text-[#24272A] text-[20px] font-semibold leading-[160%]">
+          class="text-[#24272A]
+                 text-[16px] sm:text-[18px] lg:text-[20px]
+                 font-semibold leading-[150%]"
+        >
           2 и 3 декабря сотрудники музея представили обновлённую программу
           инклюзивных мероприятий
         </h3>
       </article>
 
-      <!-- card -->
-      <article class="flex flex-col gap-4">
-        <div class="w-full h-[240px] bg-[#F0F1F2] overflow-hidden">
+      <!-- CARD -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col gap-4 snap-start">
+        <div class="w-full h-[220px] bg-[#F0F1F2] overflow-hidden">
           <img
             src="/assets/img/news-2.jpg"
             alt=""
-            class="w-full h-full object-cover hover:scale-105 transition duration-500">
+            class="w-full h-full object-cover
+                   transition duration-500 hover:scale-105"
+          >
         </div>
 
-        <div class="text-[#8D9399] text-[16px] leading-[160%]">
+        <div class="text-[#8D9399] text-sm leading-[160%]">
           02.12.2025
         </div>
 
         <h3
-          class="text-[#24272A] text-[20px] font-semibold leading-[160%]">
-          В Московской духовной академии пройдёт конференция по развитию
-          религиозных центров
+          class="text-[#24272A]
+                 text-[16px] sm:text-[18px] lg:text-[20px]
+                 font-semibold leading-[150%]"
+        >
+          В Московской духовной академии пройдёт конференция
+          по развитию религиозных центров
         </h3>
       </article>
 
-      <!-- card -->
-      <article class="flex flex-col gap-4">
-        <div class="w-full h-[240px] bg-[#F0F1F2] overflow-hidden">
+      <!-- CARD -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col gap-4 snap-start">
+        <div class="w-full h-[220px] bg-[#F0F1F2] overflow-hidden">
           <img
             src="/assets/img/news-3.jpg"
             alt=""
-            class="w-full h-full object-cover hover:scale-105 transition duration-500">
+            class="w-full h-full object-cover
+                   transition duration-500 hover:scale-105"
+          >
         </div>
 
-        <div class="text-[#8D9399] text-[16px] leading-[160%]">
+        <div class="text-[#8D9399] text-sm leading-[160%]">
           11.11.2025
         </div>
 
         <h3
-          class="text-[#24272A] text-[20px] font-semibold leading-[160%]">
+          class="text-[#24272A]
+                 text-[16px] sm:text-[18px] lg:text-[20px]
+                 font-semibold leading-[150%]"
+        >
           Объявлены лауреаты выставки-конкурса в трёх номинациях
         </h3>
       </article>
 
     </div>
+
+    <!-- MOBILE BUTTON -->
+    <div class="mt-8 sm:hidden">
+      <a
+        href="#"
+        class="flex items-center justify-center gap-4
+               px-6 py-4 border border-[#24272A]
+               text-[#24272A] text-base font-semibold"
+      >
+        Все новости
+        <img src="/assets/svg/arrow-right.svg" class="w-6 h-6" alt="">
+      </a>
+    </div>
+
   </div>
 </section>
